Updated README file and added overflow:hidden to body to fix problems with overflowing

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,10 @@
 	align-items: center;
 }
 
+body {
+	overflow: hidden;
+}
+
 .text-wrapper {
 	margin: 0 auto;
 	width: 80%;
